--- a/libs/ui/src/lib/layout/layout.component.scss
+++ b/libs/ui/src/lib/layout/layout.component.scss
@@ -18,7 +18,7 @@ mat-sidenav {
   height: calc(100vh - 64px);
   // margin: 16px;
   // margin-left: 32px;
-  // padding: 16px;
+  padding: 10px;
   overflow: auto;
 }
 
