--- a/libs/ui/src/lib/layout/layout.component.html
+++ b/libs/ui/src/lib/layout/layout.component.html
@@ -30,7 +30,7 @@
   </mat-sidenav>
   <mat-sidenav-content>
     <div class="content">
-      <div class="p-2"><router-outlet></router-outlet></div>
+      <router-outlet></router-outlet>
     </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
