--- a/apps/attica-dt/src/app/public/attica-region/attica-region.component.html
+++ b/apps/attica-dt/src/app/public/attica-region/attica-region.component.html
@@ -1,1 +1,5 @@
-<p>attica-region works!</p>
+<mgl-map
+  [style]="'mapbox://styles/mapbox/streets-v9'"
+  [zoom]="[9]"
+  [center]="[-74.5, 40]"
+></mgl-map>
