two public components

--- a/apps/attica-dt/src/app/public/attica-region-boundaries/attica-region-boundaries.component.html
+++ b/apps/attica-dt/src/app/public/attica-region-boundaries/attica-region-boundaries.component.html
@@ -1,9 +1,11 @@
 <!-- prettier-ignore -->
-<mgl-map
-  [style]="'mapbox://styles/mapbox/streets-v9'"
+<!-- <mgl-map
+  [style]="'mapbox://styles/mapbox/streets-v11'"
   [zoom]="[7]"
   [center]="[23.530636, 37.218564]"
 >
+<mgl-control mglNavigation></mgl-control>
+<mgl-control mglFullscreen></mgl-control>
   <mgl-layer
     id="attica region"
     type="line"
@@ -20,4 +22,5 @@
       'line-width': 1
     }"
   ></mgl-layer>
-</mgl-map>
+</mgl-map> -->
+<p>Attica Region Works!</p>
