--- a/apps/attica-dt/src/styles.css
+++ b/apps/attica-dt/src/styles.css
@@ -1,9 +1,9 @@
 @import '@angular/material/prebuilt-themes/indigo-pink.css';
 @import '~mapbox-gl/dist/mapbox-gl.css';
 
-@tailwind base;
+/* @tailwind base;
 @tailwind components;
-@tailwind utilities;
+@tailwind utilities; */
 
 html,
 body {
