--- a/libs/ui/src/lib/layout/layout.component.scss
+++ b/libs/ui/src/lib/layout/layout.component.scss
@@ -1,29 +1,29 @@
-
 mat-toolbar {
   background: #004a9f;
   color: white;
 }
 
 mat-sidenav {
-  // margin: 16px;
   width: 200px;
   border-right: none;
-  // background: #002b5c;
-  // color: white;
-  // padding: 16px;
+  text-align: center;
+}
+
+.mat-sidenav-right {
+  width: 200px;
+
   text-align: center;
 }
 
 .content {
-  height: calc(100vh - 64px);
-  // margin: 16px;
-  // margin-left: 32px;
-  // padding: 10px;
+  // height: calc(100vh - 64px);
+  height: calc(100vh - 128px);
   overflow: auto;
 }
 
 mat-sidenav-container {
-  height: calc(100vh - 64px);
+  // height: calc(100vh - 64px);
+  height: calc(100vh - 128px);
 }
 
 .menu-button {
@@ -39,27 +39,11 @@ mat-sidenav-container {
 }
 
 .avatar {
-  // margin-top: 16px;
   width: 190px;
   margin: auto;
   margin-top: 2px;
-  // height: 100px;
-  
 }
 
-.name {
-  margin-top: 8px;
-  font-weight: normal;
-}
-
-.designation {
-  margin-top: 2px;
-  font-size: 0.7rem;
-  color: lightgrey;
-}
-
-mat-divider {
-  margin-top: 16px;
-  margin-bottom: 16px;
-  background-color: rgba(255, 255, 255, 0.5);
+.spacer {
+  flex: 1 1 auto;
 }
