attica-region-boundaries from store as observable

--- a/libs/mapbox/src/lib/layer/layer.component.html
+++ b/libs/mapbox/src/lib/layer/layer.component.html
@@ -1,7 +1,9 @@
-<mgl-layer
-  id="id"
-  [type]="type"
-  [source]="source"
-  [layout]="layout"
-  [paint]="paint"
-></mgl-layer>
+<ng-container *ngIf="data$ | async as data">
+  <mgl-layer
+    id="id"
+    [type]="type"
+    [source]="{ type: 'geojson', data: data }"
+    [layout]="layout"
+    [paint]="paint"
+  ></mgl-layer>
+</ng-container>
