rivers repository and map scripting

--- a/apps/attica-dt/src/app/public/attica-region-boundary/attica-region-boundary.component.html
+++ b/apps/attica-dt/src/app/public/attica-region-boundary/attica-region-boundary.component.html
@@ -1,28 +1,1 @@
-<!-- <mgl-map
-  [style]="'mapbox://styles/mapbox/streets-v11'"
-  [fitBounds]="[
-    [24.116494, 38.340999],
-    [22.890434, 35.823757]
-  ]"
->
-  <mgl-control mglNavigation></mgl-control>
-  <mgl-control mglFullscreen></mgl-control>
-  <mgl-control mglScale></mgl-control>
-  <mgl-layer
-    id="attica region"
-    type="line"
-    [source]="{
-      type: 'geojson',
-      data: data
-    }"
-    [layout]="{
-      'line-join': 'round',
-      'line-cap': 'round'
-    }"
-    [paint]="{
-      'line-color': '#000',
-      'line-width': 2
-    }"
-  ></mgl-layer>
-</mgl-map> -->
-<uwmh-map [feature$]="attica_region$"></uwmh-map>
+<uwmh-map [features$]="features$"></uwmh-map>
