--- a/libs/ui/src/lib/layout/layout.component.html
+++ b/libs/ui/src/lib/layout/layout.component.html
@@ -33,6 +33,8 @@
     <mat-nav-list>
       <h4 matSubheader>Attica Region</h4>
       <a mat-list-item routerLink="boundaries">Display Boundaries</a>
+      <a mat-list-item routerLink="rivers">Display Rivers</a>
+
       <!-- <a mat-list-item routerLink="rivers">Display Rivers</a>
       <a mat-list-item>Link 3</a> -->
     </mat-nav-list>
