plant nursery location

--- a/libs/ui/src/lib/layout/layout.component.html
+++ b/libs/ui/src/lib/layout/layout.component.html
@@ -41,7 +41,7 @@
     <mat-divider></mat-divider>
     <mat-nav-list>
       <h4 matSubheader>Plant Nursery</h4>
-      <a mat-list-item>Location</a>
+      <a mat-list-item routerLink="nursery">Location</a>
     </mat-nav-list>
   </mat-sidenav>
   <!-- right sidenav -->
