one map instanse, need to take care layers

--- a/apps/attica-dt/src/app/map/map.component.html
+++ b/apps/attica-dt/src/app/map/map.component.html
@@ -10,15 +10,9 @@
   <mgl-control mglScale *ngIf="scaleControl"></mgl-control>
 
   <mgl-control>
-    <!-- <button mat-button>
-      <mat-icon class="mapboxgl-ctrl-icon">menu</mat-icon>
-    </button> -->
     <div class="mapboxgl-ctrl-group">
-      <button (click)="click0()" title="Edit geometries">
-        <mat-icon>menu</mat-icon>
-      </button>
-      <button (click)="click0()" title="Edit geometries">
-        <mat-icon>menu</mat-icon>
+      <button title="Layers">
+        <mat-icon>layers</mat-icon>
       </button>
     </div>
   </mgl-control>
