Heavy redesign of store and backend :-/

--- a/apps/attica-dt/src/app/map/map.component.css
+++ b/apps/attica-dt/src/app/map/map.component.css
@@ -3,3 +3,12 @@ button {
   align-items: center;
   justify-content: center;
 }
+
+.small {
+  font-size: x-small;
+}
+
+.small-button {
+  height: 24px;
+  align-items: center;
+}
