auto sources and layers

--- a/apps/attica-dt/src/app/map/map.component.html
+++ b/apps/attica-dt/src/app/map/map.component.html
@@ -3,6 +3,7 @@
   [style]="style"
   [fitBounds]="bounds"
   [center]="center"
+  [pitch]="pitch"
   (mapLoad)="onMapLoad($event)"
 >
   <mgl-control mglNavigation *ngIf="navigationControl"></mgl-control>
