toggle layers from map button

--- a/apps/attica-dt/src/app/app.component.html
+++ b/apps/attica-dt/src/app/app.component.html
@@ -19,8 +19,8 @@
     <img class="avatar" src="/assets/logo.png" />
     <mat-nav-list>
       <h4 matSubheader>Attica Region</h4>
-      <a mat-list-item>Display Boundaries</a>
-      <a mat-list-item>Display Rivers</a>
+      <a mat-list-item (click)="attica_bounds()">Display Boundaries</a>
+      <a mat-list-item (click)="rivers()">Display Rivers</a>
     </mat-nav-list>
     <mat-divider></mat-divider>
     <mat-nav-list>
