--- a/apps/attica-dt/src/app/map/map.component.html
+++ b/apps/attica-dt/src/app/map/map.component.html
@@ -16,7 +16,7 @@
 
   <mgl-control>
     <div class="mapboxgl-ctrl-group">
-      <button title="Layers" (click)="getLayers()">
+      <button title="Toggle Layers" (click)="toggleLayers()">
         <mat-icon>layers</mat-icon>
       </button>
     </div>
