--- a/apps/attica-dt/src/app/map/map.component.html
+++ b/apps/attica-dt/src/app/map/map.component.html
@@ -4,6 +4,7 @@
   [fitBounds]="bounds"
   [center]="center"
   [pitch]="pitch"
+  [antialias]="antialias"
   (mapLoad)="onMapLoad($event)"
 >
   <mgl-control mglNavigation *ngIf="navigationControl"></mgl-control>
