major house keeping around mapservice,layer toggle

--- a/apps/attica-dt/src/app/app.component.html
+++ b/apps/attica-dt/src/app/app.component.html
@@ -27,7 +27,7 @@
   </mat-sidenav>
   <mat-sidenav-content>
     <div class="content">
-      <uwmh-map (map)="onMap($event)"></uwmh-map>
+      <uwmh-map (mapEvent)="onMapEvent($event)"></uwmh-map>
     </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
