--- a/apps/attica-dt/src/app/app.component.html
+++ b/apps/attica-dt/src/app/app.component.html
@@ -22,6 +22,7 @@
       <a mat-list-item (click)="attica_bounds()">Attica Region</a>
       <a mat-list-item (click)="rivers()">Attica Perfecture</a>
       <a mat-list-item (click)="nursery()"> Plant Nursery</a>
+      <a mat-list-item (click)="portara()"> Apollon Temple Naxos</a>
     </mat-nav-list>
     <mat-divider></mat-divider>
   </mat-sidenav>
