--- a/apps/attica-dt/src/styles.scss
+++ b/apps/attica-dt/src/styles.scss
@@ -1,3 +1,4 @@
+@use '@angular/material' as mat;
 @import '@angular/material/prebuilt-themes/indigo-pink.css';
 @import '~mapbox-gl/dist/mapbox-gl.css';
 @import '~@mapbox/mapbox-gl-draw/dist/mapbox-gl-draw.css';
@@ -6,6 +7,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+$my-custom-level: mat.define-typography-level(
+  $font-family: Roboto,
+  $font-weight: 400,
+  $font-size: 0.5rem,
+  $line-height: 1,
+  $letter-spacing: normal,
+);
 
 html,
 body {
@@ -19,7 +28,8 @@ body {
 }
 
 mgl-map {
-  width: calc(100vh-200px);
+  // width: calc(100vh - 200px);
+  width: 100%;
   /* height: 600px; */
   height: 100%;
 }
