--- a/apps/attica-dt/src/app/dialogs/map-info/map-info.component.html
+++ b/apps/attica-dt/src/app/dialogs/map-info/map-info.component.html
@@ -12,172 +12,10 @@
     ></iframe
   ></mat-tab>
   <mat-tab label="Weather">
-    <div *ngIf="weatherData$ | async as w">
-      <div class="flex flex-row items-center justify-around">
-        <div><img src="/assets/weather/{{ w.weather.icon }}.png" /></div>
-
-        <div class="compass text-sm">
-          <div class="direction">
-            <p>
-              {{ w.wind_cdir
-              }}<span>{{ w.wind_spd | number: '1.2-2' }} m/s</span>
-            </p>
-          </div>
-          <div class="arrow {{ w.wind_cdir | lowercase }}"></div>
-        </div>
-      </div>
-
-      <p class="text-center font-semibold">{{ w.ob_time | date: 'medium' }},</p>
-      <p class="text-center font-semibold">
-        {{ w.weather.description }}, {{ w.temp }}&#8451;
-      </p>
-      <p class="text-center font-semibold">
-        Cloud coverage {{ w.clouds }}%, Visibility {{ w.vis }} Km
-      </p>
-
-      <mat-divider></mat-divider>
-      <table class="w-full">
-        <tr>
-          <td>Feels Like</td>
-          <td>{{ w.app_temp }}&#8451;</td>
-        </tr>
-        <tr>
-          <td>Atm. Pressure</td>
-          <td>{{ w.pres | number: '1.2-2' }} mb</td>
-        </tr>
-        <tr>
-          <td>Wind Gust</td>
-          <td>{{ w.gust | number: '1.2-2' }} m/s</td>
-        </tr>
-        <tr>
-          <td>Relative Humidity</td>
-          <td>{{ w.rh }}%</td>
-        </tr>
-        <tr>
-          <td>Dew Point</td>
-          <td>{{ w.dewpt | number: '1.2-2' }}&#8451;</td>
-        </tr>
-        <tr>
-          <td>Precipitation</td>
-          <td>{{ w.precip | number: '1.2-2' }} mm/hr</td>
-        </tr>
-        <tr>
-          <td>UV Index</td>
-          <td>{{ w.uv }}</td>
-        </tr>
-        <tr>
-          <td>Air Quality Index</td>
-          <td>{{ w.aqi }}</td>
-        </tr>
-        <tr>
-          <td>Diffuse horizontal solar irradiance</td>
-          <td>{{ w.dhi | number: '1.2-2' }} W/m^2</td>
-        </tr>
-        <tr>
-          <td>Direct normal solar irradiance</td>
-          <td>{{ w.dni | number: '1.2-2' }} W/m^2</td>
-        </tr>
-        <tr>
-          <td>Global horizontal solar irradiance</td>
-          <td>{{ w.ghi | number: '1.2-2' }} W/m^2</td>
-        </tr>
-        <tr>
-          <td>Estimated Solar Radiation</td>
-          <td>{{ w.solar_rad | number: '1.2-2' }} W/m^2</td>
-        </tr>
-        <tr>
-          <td>Solar elevation angle</td>
-          <td>{{ w.elev_angle }} degrees</td>
-        </tr>
-      </table>
-    </div>
-    <div class="text-xs text-right">
-      Data source:&nbsp;
-      <a href="https://www.weatherbit.io/api">Weatherbit API</a>
-    </div>
+    <uwmh-weatherbit-info></uwmh-weatherbit-info>
   </mat-tab>
 
   <mat-tab label="PLC Data">
-    <table class="text-xs" mat-table [dataSource]="dataSource" matSort>
-      <ng-container matColumnDef="ts">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Timestamp</th>
-        <td mat-cell *matCellDef="let entity">
-          {{ entity.ts | date: 'dd/MM/yyyy H:mm':'GMT' }}
-        </td>
-      </ng-container>
-      <ng-container matColumnDef="col3">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>
-          Temperature membrane tank 5
-        </th>
-        <td mat-cell *matCellDef="let entity">{{ entity.col3 }}</td>
-      </ng-container>
-      <ng-container matColumnDef="col4">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>
-          LT1 (pH membrane tank 5)
-        </th>
-        <td mat-cell *matCellDef="let entity">{{ entity.col4 }}</td>
-      </ng-container>
-      <ng-container matColumnDef="col5">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>
-          DO ppm LDO aeriation tank 4A
-        </th>
-        <td mat-cell *matCellDef="let entity">{{ entity.col5 }}</td>
-      </ng-container>
-      <ng-container matColumnDef="col6">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>
-          DO ppm anoxic tank3
-        </th>
-        <td mat-cell *matCellDef="let entity">{{ entity.col6 }}</td>
-      </ng-container>
-      <ng-container matColumnDef="col7">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>
-          MLSS SOLID mg/l membrane tank 5
-        </th>
-        <td mat-cell *matCellDef="let entity">{{ entity.col7 }}</td>
-      </ng-container>
-      <ng-container matColumnDef="col8">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>
-          MLSS SOLID mg/l membrane tank 4A
-        </th>
-        <td mat-cell *matCellDef="let entity">{{ entity.col8 }}</td>
-      </ng-container>
-      <ng-container matColumnDef="col9">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>
-          LDO DO ppm anoxic
-        </th>
-        <td mat-cell *matCellDef="let entity">{{ entity.col9 }}</td>
-      </ng-container>
-      <ng-container matColumnDef="col10">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>
-          Temperature anoxic tank
-        </th>
-        <td mat-cell *matCellDef="let entity">{{ entity.col10 }}</td>
-      </ng-container>
-      <ng-container matColumnDef="col11">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>
-          Turbidity NTU tank 10
-        </th>
-        <td mat-cell *matCellDef="let entity">{{ entity.col11 }}</td>
-      </ng-container>
-      <tr
-        mat-header-row
-        *matHeaderRowDef="displayedColumns"
-        class="text-center"
-      ></tr>
-      <tr
-        mat-row
-        *matRowDef="let row; columns: displayedColumns"
-        class="text-center"
-      ></tr>
-    </table>
-    <mat-paginator
-      [pageSizeOptions]="[5, 10]"
-      showFirstLastButtons
-      aria-label="Select page of periodic elements"
-    >
-    </mat-paginator>
-    <div (click)="exportExcell()" class="cursor-pointer text-xs">
-      <mat-icon>download</mat-icon>
-    </div>
+    <uwmh-plant-nursery-plc></uwmh-plant-nursery-plc>
   </mat-tab>
 </mat-tab-group>
