--- a/libs/ui/src/lib/line-plot/line-plot.component.html
+++ b/libs/ui/src/lib/line-plot/line-plot.component.html
@@ -1,1 +1,7 @@
-<div echarts [options]="chartOption" class="demo-chart"></div>
+<div
+  echarts
+  [options]="chartOption"
+  [merge]="chartOption"
+  [loading]="true"
+  class="demo-chart"
+></div>
