--- a/apps/attica-dt/src/app/app.component.html
+++ b/apps/attica-dt/src/app/app.component.html
@@ -15,27 +15,10 @@
         *ngIf="(isLoggedIn$ | async) === false"
       ></uwmh-google-signin>
 
-      <div class="flex items-center" *ngIf="isLoggedIn$ | async">
-        <button
-          mat-icon-button
-          [matTooltip]="(username$ | async) ?? ''"
-          [matTooltipPosition]="'after'"
-          [matTooltipClass]="'text-sm'"
-          [matMenuTriggerFor]="menu"
-        >
-          <img class="circle" src="{{ userPicture$ | async }}" />
-        </button>
-        <mat-menu #menu="matMenu">
-          <button mat-menu-item>
-            <mat-icon>person</mat-icon>
-            <span>Profile</span>
-          </button>
-          <button mat-menu-item (click)="logout()">
-            <mat-icon>logout</mat-icon>
-            <span>Logout</span>
-          </button>
-        </mat-menu>
-      </div>
+      <uwmh-avatar-menu
+        *ngIf="isLoggedIn$ | async"
+        (menuSelection)="onUserSelection($event)"
+      ></uwmh-avatar-menu>
     </div>
   </mat-toolbar-row>
 </mat-toolbar>
