--- a/apps/attica-dt/src/app/app.component.html
+++ b/apps/attica-dt/src/app/app.component.html
@@ -1,14 +1,15 @@
-<mat-toolbar>
+<mat-toolbar color="primary">
   <mat-toolbar-row>
-    <div class="flex flex-row items-center space-x-4">
-      <button
+    <div class="w-full flex flex-row justify-between">
+      <img class="w-36" src="/assets/logo1.png" />
+      <!-- <button
         mat-icon-button
         *ngIf="sidenav.mode === 'over'"
         (click)="sidenav.toggle()"
       >
         <mat-icon *ngIf="!sidenav.opened"> menu </mat-icon>
         <mat-icon *ngIf="sidenav.opened"> close </mat-icon>
-      </button>
+      </button> -->
       <span>Attica Digital Twin</span>
 
       <uwmh-google-signin
@@ -21,14 +22,18 @@
       ></uwmh-avatar-menu>
     </div>
   </mat-toolbar-row>
+
+  <mat-toolbar-row>
+    <uwmh-quick-navigation></uwmh-quick-navigation
+  ></mat-toolbar-row>
 </mat-toolbar>
 
 <mat-sidenav-container>
   <!-- left sidenav -->
   <mat-sidenav #left #sidenav="matSidenav" class="content" position="start">
-    <img class="avatar" src="/assets/logo.png" />
     <mat-nav-list>
       <h4 matSubheader>Quick Navigation</h4>
+
       <a mat-list-item (click)="attica_bounds()">Attica Region</a>
       <a mat-list-item (click)="rivers()">Rivers of Attica</a>
       <a mat-list-item (click)="nursery()">Athens Plant Nursery</a>
