--- a/libs/ui/src/lib/atticadt/atticadt.component.scss
+++ b/libs/ui/src/lib/atticadt/atticadt.component.scss
@@ -14,6 +14,7 @@ mat-sidenav {
   // height: calc(100vh - 64px);
   height: calc(100vh - 128px);
   overflow: auto;
+  width: 100%;
 }
 
 mat-sidenav-container {
