--- a/libs/ui/src/lib/avatar-menu/avatar-menu.component.html
+++ b/libs/ui/src/lib/avatar-menu/avatar-menu.component.html
@@ -8,7 +8,7 @@
     <img class="circle" src="{{ userPicture$ | async }}" />
   </button>
   <mat-menu #menu="matMenu">
-    <button mat-menu-item>
+    <button mat-menu-item (click)="notimplemented()">
       <mat-icon>person</mat-icon>
       <span>Profile</span>
     </button>
