referrerpolicy="no-referrer"

--- a/libs/ui/src/lib/avatar-menu/avatar-menu.component.html
+++ b/libs/ui/src/lib/avatar-menu/avatar-menu.component.html
@@ -5,7 +5,11 @@
     [matTooltipClass]="'text-sm'"
     [matMenuTriggerFor]="menu"
   >
-    <img class="circle" src="{{ userPicture$ | async }}" />
+    <img
+      class="circle"
+      src="{{ userPicture$ | async }}"
+      referrerpolicy="no-referrer"
+    />
   </button>
   <mat-menu #menu="matMenu">
     <button mat-menu-item (click)="notimplemented()">
