--- a/libs/ui/src/lib/topbar/topbar.component.html
+++ b/libs/ui/src/lib/topbar/topbar.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary">
+<mat-toolbar color="primary" class="w-full flex-shrink-0 flex-grow-0">
   <mat-toolbar-row>
     <div class="w-full flex flex-row justify-between">
       <img class="w-36" src="/assets/logo1.png" />
