--- a/libs/ui/src/lib/avatar-menu/avatar-menu.component.html
+++ b/libs/ui/src/lib/avatar-menu/avatar-menu.component.html
@@ -16,6 +16,10 @@
       <mat-icon>person</mat-icon>
       <span>Profile</span>
     </button>
+    <button mat-menu-item (click)="notimplemented()">
+      <mat-icon>science</mat-icon>
+      <span>ΕΥΔΑΠ quality analyses</span>
+    </button>
     <button mat-menu-item (click)="onClick('logout')">
       <mat-icon>logout</mat-icon>
       <span>Logout</span>
