--- a/libs/dialog/src/lib/eydap-analyses-a-p-n/eydap-analyses-a-p-n.component.html
+++ b/libs/dialog/src/lib/eydap-analyses-a-p-n/eydap-analyses-a-p-n.component.html
@@ -1,13 +1,17 @@
 <h1 mat-dialog-title>
   <div class="flex flex-col text-center">
-    <div>ΕΥΔΑΠ Quality Analysis</div>
+    <div>ΕΥΔΑΠ Quality Analyses</div>
     <div class="text-lg">Athens Plant Nursery SM unit</div>
-    <div class="text-sm">{{ today | date: 'longDate' }}</div>
   </div>
 </h1>
 
-<div mat-dialog-content>
-  <uwmh-eydap-analyses-apn-form
-    (analysis)="onAnalysis($event)"
-  ></uwmh-eydap-analyses-apn-form>
-</div>
+<mat-tab-group>
+  <mat-tab label="New Analysis">
+    <p class="text-center">{{ today | date: 'longDate' }}</p>
+    <uwmh-eydap-analyses-apn-form
+      (analysis)="onAnalysis($event)"
+    ></uwmh-eydap-analyses-apn-form>
+  </mat-tab>
+
+  <mat-tab label="All Analyses"> <uwmh-eydap-apn></uwmh-eydap-apn> </mat-tab>
+</mat-tab-group>
