--- a/libs/dialog/src/lib/datatables/eydap-apn/eydap-apn.component.html
+++ b/libs/dialog/src/lib/datatables/eydap-apn/eydap-apn.component.html
@@ -1,26 +1,78 @@
-<table class="text-xs" mat-table [dataSource]="dataSource">
+<table class="text-xs" mat-table [dataSource]="dataSource" matSort>
   <ng-container matColumnDef="timestamp">
-    <th mat-header-cell *matHeaderCellDef>Date</th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
     <td mat-cell *matCellDef="let entity">
-      {{ entity.timestamp | date: 'short' }}
+      {{ entity.timestamp | date: 'dd/MM/yyyy' }}
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="total_suspended_solids">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>
+      Total Suspended Solids
+    </th>
+    <td mat-cell *matCellDef="let entity">
+      {{ entity.total_suspended_solids }}
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="biochemical_oxygen_demand">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>
+      Biochemical Oxygen Demand
+    </th>
+    <td mat-cell *matCellDef="let entity">
+      {{ entity.biochemical_oxygen_demand }}
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="total_nitrogen">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Total Nitrogen</th>
+    <td mat-cell *matCellDef="let entity">
+      {{ entity.total_nitrogen }}
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="ammonium">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Ammonium</th>
+    <td mat-cell *matCellDef="let entity">
+      {{ entity.ammonium }}
     </td>
   </ng-container>
 
   <ng-container matColumnDef="turbidity">
-    <th mat-header-cell *matHeaderCellDef>Turbidity</th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Turbidity</th>
     <td mat-cell *matCellDef="let entity">
       {{ entity.turbidity }}
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="total_carbon">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Total Carbon</th>
+    <td mat-cell *matCellDef="let entity">
+      {{ entity.total_carbon }}
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="electric_conductivity">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>
+      Electric Conductivity
+    </th>
+    <td mat-cell *matCellDef="let entity">
+      {{ entity.electric_conductivity }}
     </td>
   </ng-container>
 
   <tr
     mat-header-row
     *matHeaderRowDef="displayedColumns"
-    class="text-center text-xs"
+    class="text-center text-xs cursor-pointer"
   ></tr>
   <tr
     mat-row
+    (click)="onClick(row)"
     *matRowDef="let row; columns: displayedColumns"
     class="text-center text-xs"
   ></tr>
 </table>
+
+<mat-paginator [pageSizeOptions]="[5, 10]" showFirstLastButtons>
+</mat-paginator>
