--- a/libs/dialog/src/lib/datatables/plant-nursery-plc/plant-nursery-plc.component.html
+++ b/libs/dialog/src/lib/datatables/plant-nursery-plc/plant-nursery-plc.component.html
@@ -68,11 +68,7 @@
     class="text-center"
   ></tr>
 </table>
-<mat-paginator
-  [pageSizeOptions]="[5, 10]"
-  showFirstLastButtons
-  aria-label="Select page of periodic elements"
->
+<mat-paginator [pageSizeOptions]="[5, 10]" showFirstLastButtons>
 </mat-paginator>
 <div (click)="exportExcell()" class="cursor-pointer text-xs">
   <mat-icon>download</mat-icon>
