--- a/libs/uiforms/src/lib/eydap-analyses-a-p-n/eydap-analyses-a-p-n.component.html
+++ b/libs/uiforms/src/lib/eydap-analyses-a-p-n/eydap-analyses-a-p-n.component.html
@@ -1,59 +1,72 @@
-<form [formGroup]="form">
-  <p>
-    <mat-form-field>
-      <mat-label>Total Suspended Solids</mat-label>
-      <input matInput type="number" formControlName="total_suspended_solids" />
-      <mat-hint>mg/l</mat-hint>
-    </mat-form-field>
-  </p>
-  <p>
-    <mat-form-field>
-      <mat-label>Biochemical Oxygen Demand</mat-label>
-      <input
-        matInput
-        type="number"
-        formControlName="biochemical_oxygen_demand"
-      />
-      <mat-hint>mg/l</mat-hint>
-    </mat-form-field>
-  </p>
-  <p>
-    <mat-form-field>
-      <mat-label>Total Nitrogen</mat-label>
-      <input matInput type="number" formControlName="total_nitrogen" />
-      <mat-hint>mg/l</mat-hint>
-    </mat-form-field>
-  </p>
-  <p>
-    <mat-form-field>
-      <mat-label>Ammonium</mat-label>
-      <input matInput type="number" formControlName="ammonium" />
-      <mat-hint>NH<sub>4</sub><sup>-</sup></mat-hint>
-    </mat-form-field>
-  </p>
-  <p>
-    <mat-form-field>
-      <mat-label>Turbidity</mat-label>
-      <input matInput type="number" formControlName="turbidity" />
-      <mat-hint>NTU</mat-hint>
-    </mat-form-field>
-  </p>
-  <p>
-    <mat-form-field>
-      <mat-label>Total Carbon</mat-label>
-      <input matInput type="number" formControlName="total_carbon" />
-      <mat-hint>TC/100ml</mat-hint>
-    </mat-form-field>
-  </p>
-  <p>
-    <mat-form-field>
-      <mat-label>Electric Conductivity</mat-label>
-      <input matInput type="number" formControlName="electric_conductivity" />
-      <mat-hint>EC/100ml</mat-hint>
-    </mat-form-field>
-  </p>
-</form>
-
-<p>
-  <button mat-button color="primary" (click)="onSubmit()">Submit</button>
-</p>
+<mat-card class="form-card">
+  <mat-card-content>
+    <form [formGroup]="form">
+      <div class="grid grid-cols-1 gap-2">
+        <div>
+          <mat-form-field>
+            <mat-label>Total Suspended Solids</mat-label>
+            <input
+              matInput
+              type="number"
+              formControlName="total_suspended_solids"
+            />
+            <mat-hint>mg/l</mat-hint>
+          </mat-form-field>
+        </div>
+        <div>
+          <mat-form-field>
+            <mat-label>Biochemical Oxygen Demand</mat-label>
+            <input
+              matInput
+              type="number"
+              formControlName="biochemical_oxygen_demand"
+            />
+            <mat-hint>mg/l</mat-hint>
+          </mat-form-field>
+        </div>
+        <div>
+          <mat-form-field>
+            <mat-label>Total Nitrogen</mat-label>
+            <input matInput type="number" formControlName="total_nitrogen" />
+            <mat-hint>mg/l</mat-hint>
+          </mat-form-field>
+        </div>
+        <div>
+          <mat-form-field>
+            <mat-label>Ammonium</mat-label>
+            <input matInput type="number" formControlName="ammonium" />
+            <mat-hint>NH<sub>4</sub><sup>-</sup></mat-hint>
+          </mat-form-field>
+        </div>
+        <div>
+          <mat-form-field>
+            <mat-label>Turbidity</mat-label>
+            <input matInput type="number" formControlName="turbidity" />
+            <mat-hint>NTU</mat-hint>
+          </mat-form-field>
+        </div>
+        <div>
+          <mat-form-field>
+            <mat-label>Total Carbon</mat-label>
+            <input matInput type="number" formControlName="total_carbon" />
+            <mat-hint>TC/100ml</mat-hint>
+          </mat-form-field>
+        </div>
+        <div>
+          <mat-form-field>
+            <mat-label>Electric Conductivity</mat-label>
+            <input
+              matInput
+              type="number"
+              formControlName="electric_conductivity"
+            />
+            <mat-hint>EC/100ml</mat-hint>
+          </mat-form-field>
+        </div>
+      </div>
+    </form>
+  </mat-card-content>
+  <mat-card-actions>
+    <button mat-button color="primary" (click)="onSubmit()">Submit</button>
+  </mat-card-actions>
+</mat-card>
