eydap access from avatar

--- a/libs/dialog/src/lib/datatables/eydap-apn/eydap-apn.component.html
+++ b/libs/dialog/src/lib/datatables/eydap-apn/eydap-apn.component.html
@@ -70,7 +70,7 @@
     mat-row
     (click)="onClick(row)"
     *matRowDef="let row; columns: displayedColumns"
-    class="text-center text-xs"
+    class="text-center text-xs cursor-pointer"
   ></tr>
 </table>
 
