--- a/libs/dialog/src/lib/eydap-analyses-a-p-n/eydap-analyses-a-p-n.component.html
+++ b/libs/dialog/src/lib/eydap-analyses-a-p-n/eydap-analyses-a-p-n.component.html
@@ -36,5 +36,7 @@
     </div>
   </mat-tab>
 
-  <mat-tab label="Chart"></mat-tab>
+  <mat-tab label="Chart"
+    >Nothing here yet! Please describe what would be useful!</mat-tab
+  >
 </mat-tab-group>
