--- a/libs/ui/src/lib/avatar-menu/avatar-menu.component.html
+++ b/libs/ui/src/lib/avatar-menu/avatar-menu.component.html
@@ -16,7 +16,7 @@
       <mat-icon>person</mat-icon>
       <span>Profile</span>
     </button>
-    <button mat-menu-item (click)="onClick('eydap-apn')">
+    <button mat-menu-item *ngIf="eydap$ | async" (click)="onClick('eydap-apn')">
       <mat-icon>science</mat-icon>
       <span>ΕΥΔΑΠ quality analyses</span>
     </button>
