ellinikon development threejs

--- a/libs/ui/src/lib/quick-navigation/quick-navigation.component.html
+++ b/libs/ui/src/lib/quick-navigation/quick-navigation.component.html
@@ -17,4 +17,7 @@
   <button mat-menu-item (click)="onClick('plant-nursery')">
     Athens Plant Nursery
   </button>
+  <button mat-menu-item (click)="onClick('ellinikon')">
+    Ellinikon Development
+  </button>
 </mat-menu>
