--- a/libs/uiforms/src/lib/eydap-analyses-a-p-n/eydap-analyses-a-p-n.component.html
+++ b/libs/uiforms/src/lib/eydap-analyses-a-p-n/eydap-analyses-a-p-n.component.html
@@ -35,7 +35,7 @@
           <mat-form-field>
             <mat-label>Ammonium</mat-label>
             <input matInput type="number" formControlName="ammonium" />
-            <mat-hint>NH<sub>4</sub><sup>-</sup></mat-hint>
+            <mat-hint>NH<sub>4</sub>-N</mat-hint>
           </mat-form-field>
         </div>
         <div>
@@ -49,7 +49,7 @@
           <mat-form-field>
             <mat-label>Total Carbon</mat-label>
             <input matInput type="number" formControlName="total_carbon" />
-            <mat-hint>TC/100ml</mat-hint>
+            <mat-hint>mg/l</mat-hint>
           </mat-form-field>
         </div>
         <div>
@@ -60,7 +60,7 @@
               type="number"
               formControlName="electric_conductivity"
             />
-            <mat-hint>EC/100ml</mat-hint>
+            <mat-hint>μS/cm</mat-hint>
           </mat-form-field>
         </div>
       </div>
